# PLM-data

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  pyrightconfig.json  pytest.ini  run.sh  todo.md
.claude/: settings.json
configs/: _fragments.yaml  master.yaml
configs/examples/: gray_scott_spots.yaml  heat_simple.yaml
pde_sim/: __init__.py  __main__.py
pde_sim/boundaries/: __init__.py  factory.py
pde_sim/core/: __init__.py  batch.py  config.py  diagnostics.py  logging.py  output.py  overview.py  simulation.py
pde_sim/descriptions/: __init__.py  advecting-patterns.md  advection-rotational.md  advection.md  allen-cahn-standard.md  allen-cahn.md  bacteria-advection.md  bacteria-flow.md  bistable-advection.md  bistable-allen-cahn.md  blob-diffusion-heat.md  brusselator.md  burgers.md  cahn-hilliard.md  complex-ginzburg-landau.md  (+69 more)
plm_data/: __init__.py  __main__.py
scripts/: batch_runner.py
tests/: __init__.py  conftest.py  preset_matrix.py  runtime_helpers.py  test_all_configs.py  test_batch.py  test_boundary_condition_specs.py  test_boundary_conditions.py  test_config.py  test_config_explicit_ic_params.py  test_config_files.py  test_config_realization.py  test_diagnostics.py  test_domain_specs.py  test_gif_gallery.py  test_initial_condition_specs.py  test_initial_conditions.py  test_interpolation.py  test_main.py  test_mesh.py  test_openfoam_diagnostics.py  test_output.py  test_preset_capabilities.py  test_presets.py  test_registry.py  test_runner.py  test_simulation.py  test_source_terms.py  test_spatial_fields.py  test_stochastic.py
(+2526 files in other folders)
